# Creating_ETL_Python_DuckDB

./: Dockerfile  README.md  Teste.py  app.py  duckdb.db  pipeline_00.py  pipeline_for_csv_only.py  pipeline_for_csv_only_preventing_duplicate_files.py  pipeline_general_files.py  pipeline_improved.py  pyproject.toml
gdown_folder/: vendas_05_01_2024.csv  vendas_06_01_2024.csv  vendas_07_01_2024.json
sql/: analise_categoria.sql  analise_de_vendas.sql  create_table.sql  create_table_calculado.sql  insert_into.sql
